fix(program1) : 예외사항 수정